# hendrix

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/: book.toml  build.sh  markdown.md  random.md
docs/src/: SUMMARY.md  architecture.md  roadmap.md  syscalls.md
src/: commons.rs  lib.rs  main.rs  testing.rs
src/arch/x86_64/: cpu.rs  interrupts.rs  mod.rs
src/console/: mod.rs  serial.rs  vga.rs
src/hal/: mod.rs  serial.rs  vga.rs
src/hal/arch/x86_64/: cpu.rs  gdt.rs  interrupts.rs  memory.rs  mod.rs  pic_interrupts.rs
src/kernel/: console.rs  cpu.rs  cpu_events.rs  heap.rs  main.rs  mod.rs
src/kernel/event_loop/: executor.rs  mod.rs
src/runtime/: allocator.rs  executor.rs  mod.rs  task.rs  testing.rs
