[package]
name = "hendrix"
version = "0.1.0"
authors = ["danilo queiroz <dq@rndmind.dev>"]
license = "GPLv3"
edition = "2018"

[dependencies]
bootloader = { version = "0.9.11", features = ["map_physical_memory"] }
volatile = "0.2.7"
spin = "0.5.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
x86_64 = "0.12.2"
uart_16550 = "0.2.10"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"
buddy-alloc = "0.4.1"
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.8", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.3.1", default-features = false }

[package.metadata.bootimage]
build-command = ["build"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio", "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
#test-timeout = 300          # (in seconds)
